--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
         "type": "git",
         "url": "https://github.com/9am/ctrl-panel"
     },
+    "private": false,
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
     "license": "MIT",
     "type": "module",
     "types": "./dist/index.d.ts",
