--- a/package.json
+++ b/package.json
@@ -1,60 +1,62 @@
 {
-    "name": "@9am/ctrl-panel",
-    "version": "1.3.0",
-    "description": "A simple control panel.",
-    "keywords": [
-        "ctrl-panel",
-        "control",
-        "ctrl",
-        "input",
-        "form",
-        "custom elements",
-        "web component"
-    ],
-    "author": [
-        {
-            "name": "9am",
-            "email": "tech.9am@gmail.com",
-            "url": "https://9am.github.io/"
-        }
-    ],
-    "files": [
-        "dist/*"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/9am/ctrl-panel"
-    },
-    "private": false,
-    "publishConfig": {
-        "access": "public",
-        "registry": "https://registry.npmjs.org/"
-    },
-    "license": "MIT",
-    "type": "module",
-    "types": "./dist/index.d.ts",
-    "module": "./dist/index.es.js",
-    "main": "./dist/index.umd.js",
-    "exports": {
-        ".": {
-            "import": "./dist/index.es.js",
-            "default": "./dist/index.es.js"
-        },
-        "./theme.css": "./dist/theme.css"
-    },
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "prerelease": "npm run build",
-        "release": "changeset publish"
-    },
-    "devDependencies": {
-        "@changesets/cli": "^2.25.2",
-        "postcss": "^8.4.16",
-        "postcss-nesting": "^10.2.0",
-        "prettier": "^2.7.1",
-        "typescript": "^4.8.3",
-        "vite": "^3.1.3",
-        "vite-plugin-dts": "^1.5.0"
+  "name": "@9am/ctrl-panel",
+  "version": "1.3.0",
+  "description": "A simple control panel.",
+  "keywords": [
+    "ctrl-panel",
+    "control",
+    "ctrl",
+    "input",
+    "form",
+    "custom elements",
+    "web component"
+  ],
+  "author": [
+    {
+      "name": "9am",
+      "email": "tech.9am@gmail.com",
+      "url": "https://9am.github.io/"
     }
+  ],
+  "files": [
+    "dist/*"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/9am/ctrl-panel"
+  },
+  "homepage": "https://9am.github.io/ctrl-panel/",
+  "private": false,
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "license": "MIT",
+  "type": "module",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.es.js",
+  "main": "./dist/index.umd.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "default": "./dist/index.es.js"
+    },
+    "./theme.css": "./dist/theme.css"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "prerelease": "npm run build",
+    "release": "changeset publish"
+  },
+  "devDependencies": {
+    "@9am/tsconfig": "^1.0.0",
+    "@changesets/cli": "^2.25.2",
+    "postcss": "^8.4.16",
+    "postcss-nesting": "^10.2.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.3",
+    "vite": "^3.1.3",
+    "vite-plugin-dts": "^1.5.0"
+  }
 }
